2006-04-06  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/ReflectionReader.cs
	  Mono.Cecil/ReflectionWriter.cs
	  Mono.Cecil/AggressiveReflectionReader.cs:
		Handle custom attributes on generic parameters.

2006-04-05  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/ReflectionWriter.cs:
		Ensure the param[0] is written when it should be.

2006-04-04  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/ReflectionHelper.cs:
		Remove an unused hack.

	* Mono.Cecil/AssemblyInfo.cs: Go 0.4.1

	* Mono.Cecil.Metadata/MetadataHeap.cs
	  Mono.Cecil.Metadata/MetadataStream.cs:
		Read #- stream has well.

	* Mono.Cecil/ReflectionHelper.cs:
		Implement Import stuff for System.Type and SR.*

2006-04-03	Rodrigo B. de Oliveira	<rodrigobamboo@gmail.com>

	* Mono.Cecil/SecurityDeclarationReader.cs
	  Mono.Cecil/TypeReferenceCollection.cs
	  Mono.Cecil/CompactFrameworkCompatibility.cs
	  Mono.Cecil/AssemblyFactory.cs
	  Mono.Cecil/AssemblyName.cs
	  Mono.Cecil/ExternTypeCollection.cs
	  Mono.Cecil/TypeDefinitionCollection.cs
	  CodeGen/templates/NamedCollectionImplem.cs
	  Mono.Cecil.Metadata/CultureUtils.cs
	  cecil.build:
		CompactFramework 2.0 support through CF_2_0 compilation symbol.

2006-04-03  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil.dll.sources
	  Mono.Cecil/GenericParameter.cs
	  Mono.Cecil/ReflectionHelper.cs
	  Mono.Cecil/FieldDefinition.cs
	  Mono.Cecil/CustomAttribute.cs
	  Mono.Cecil/TypeDefinition.cs
	  Mono.Cecil/IModuleDefinition.cs
	  Mono.Cecil/ImportContext.cs
	  Mono.Cecil/AssemblyName.cs
	  Mono.Cecil/MethodDefinition.cs
	  Mono.Cecil/EventDefinition.cs
	  Mono.Cecil/ModuleDefinition.cs
	  Mono.Cecil/ReflectionWriter.cs
	  Mono.Cecil/GenericContext.cs
	  Mono.Cecil/ParameterDefinition.cs
	  Mono.Cecil/PropertyDefinition.cs
	  Mono.Cecil.Cil/MethodBody.cs:
		Work on generic assemblies manipulation via
		import stuff.

2006-03-31  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/AssemblyFlags.cs:
		Add a Retargetable flag used on the CF.
